app/styles/app.scss
@import 'ember-vo-webuniversum-data-table';
@import 'ember-power-select';

.vo-header-widget {
  min-height: 45px;
}

/* Active tab */
.tab .tab__link.active {
  color: #333;
  border-bottom: 3px solid #333;
  background-color: transparent;
}

/* Preloader */
.loader-wrapper {
  margin: 25px;
}

/* Data table */
.mandataris-data-table .data-table__actions--top {
  display: none;
}

table.data-table thead {
  color: #212121;
}

.data-table tbody tr[data-table-selectable], .scheduler-option__info table tbody tr[data-table-selectable], .scheduler-slot__text__info table tbody tr[data-table-selectable], .typography table tbody tr[data-table-selectable] {
    cursor: auto;
}

.data-table tbody a {
  color: #3184d6;
  text-decoration: underline;
}

.data-table tbody a:focus,
.data-table tbody a:hover {
  color: #3184d6;
  text-decoration: none;
}

/* Temporary, will remove with new css file: */

.container-flex--contain.tab__pane {
  display: flex; }


.container-flex--contain.tab__pane[data-show=false] {
  display: none; }



/* ==========================================================================
  Style overwrite ember-power-select
 ========================================================================== */

/* basic colors and sizing of dropdown */

.ember-power-select-dropdown.ember-basic-dropdown-content--below,
.ember-power-select-dropdown.ember-basic-dropdown-content--above,
.ember-power-select-dropdown.ember-basic-dropdown-content--in-place,
.ember-power-select-trigger {
  border-radius: 0;
  border-color: #cbd2da;
  color: #333;
}

.ember-basic-dropdown-content.ember-power-select-dropdown.ember-basic-dropdown-content--below {
  box-shadow: 0 2px 2px rgba(165, 179, 194, 0.5);
}

.ember-power-select-trigger {
  line-height: 4.5rem;
  padding: 0 1rem;
  overflow: hidden;
}

.step .ember-power-select-trigger {
  padding-right: 4.5rem;
  height: 4.5rem;
  font-size: 2rem;
}

.ember-power-select-trigger.ember-basic-dropdown-trigger.ember-view.ember-power-select-trigger--active {
  border-color: #cbd2da;
  box-shadow: none;
}

.ember-power-select-trigger.ember-basic-dropdown-trigger.ember-view.ember-power-select-trigger--active:focus {
  outline: none;
}

.ember-power-select-search-input {
 font-family: flanders-sans,sans-serif;
}

.ember-power-select-search-input:focus {
  outline: none;
  border-color: #ffc515;
  box-shadow: inset 0 0 0 1px #ffc515;
}

/* Select options
 ========================================================================== */
.ember-power-select-option.ember-power-select-option--loading-message,
.ember-power-select-option.ember-power-select-option--no-matches-message,
.ember-power-select-option.ember-power-select-option--search-message {
  padding-left: 0.5rem;
  color: #999999;
}

.ember-power-select-option {
  padding-left: 3rem;
  position: relative;
}

.ember-power-select-option[aria-selected="true"],
.ember-power-select-option[aria-current="true"] {
  background-color: #E8EBEE;
  color: #0F68C9;
  text-decoration: underline;

   &:before {
    position: absolute;
    top: 1rem;
    left: 1rem;
    font-size: 7px;
    z-index: 2;
    font-family: vlaanderen_iconfont;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    text-decoration: none;
    text-transform: none;
    content: "\E00C";
    color: #0F68C9;
  }
}

.ember-power-select-selected-item {
  margin-left: 0;
}


/* Icon restyle for steps (need to reformat)
 ========================================================================== */

.step .ember-power-select-status-icon {
  display: block;
  border: none;
  width: auto;
  height: auto;
}

.step .ember-power-select-status-icon:after {
  right: 1.5rem;
  position: absolute;
  top: 1.2rem;
  content: "\E022";
  color: #666;
  font-family: vlaanderen_iconfont!important;
  font-size: 2rem;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* small hack for data tables in mandatendatabank */

thead {
  border-top: none;
}

.tab .tab__link.active {
  border-bottom: none;
}

// /* hr with labels
//  ========================================================================== */

.u-hr {
  display: block;
  position: relative;
}

.u-hr--label {
  span {
    position: absolute;
    top: -1.3rem;
    font-size: 1.6rem;
    background-color: white;
    padding-right: 1rem;
    font-weight: 500;
    color: RGBA(102, 102, 102, 1.00);
  }

  &.u-hr--label--centered label {
    left: calc(50% - 7.5rem);
    display: block;
    padding: 0 1rem;
    width: 15rem;
    text-align: center;
  }
}


// /* CSS for browser warning
//  ========================================================================== */

div.buorg {
  border-color: #CBD2DA;
  box-shadow: none;
  top: 80px;
  width: 500px;
}

div.buorg-pad {
  padding: 2rem;
}

span.buorg-icon {
  display: inline-block;
  margin-bottom: 1rem;
}

span.buorg-mainmsg,
span.buorg-moremsg {
  font-family: "flanders-sans";
}

span.buorg-moremsg {
  line-height: 1.3;
  margin-bottom: 1.5rem;
}

span.buorg-buttons {
  text-align: left;
}

a#buorgpermanent,
a#buorgul,
a#buorgig {
  border-radius: 0;
  box-shadow: none;
  margin-left: 0;
}

a#buorgpermanent,
a#buorgul {
  background-color: #06c;
  border: 1px solid #06c;
}

a#buorgig {
  background-color: white;
  color: RGBA(54, 54, 54, 1.00);
  border: 1px solid #CBD2DA;
}

